--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -955,6 +955,7 @@ spa:
     # product_deaths: "Product deaths"
     # product_enjoyments: "Product enjoyments"
     # product_events: "Product events"
+    # product_indicator_data: "Product indicator data"
     # product_linkages: "Product linkages"
     # product_localizations: "Product localizations"
     # product_measurements: "Product measurements"
@@ -1042,6 +1043,7 @@ spa:
     # serial: "N°Lot"
     # serial_number: "Serial number"
     # sex: "Sexe"
+    # shape: "Shape"
     # sign_in_count: "Nombre de connexions"
     # siren: "N° SIREN"
     # soundex: "Soundex"
