--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -987,6 +987,7 @@ arb:
           # point: "Point spatial"
           # string: "Texte"
         interpolation: #?
+        related_to: #?
       item_lists:
         animal_disease_state:
           choices: #?
