--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -535,6 +535,65 @@ fra:
         # number: "Number"
         # precision: "Precision"
         # symbol: "Symbol"
+      item_lists:
+        JPY:
+          cash:
+            # 1: "1"
+            # 5: "5"
+            # 10: "10"
+            # 50: "50"
+            # 100: "100"
+            # 500: "500"
+            # 1000: "1000"
+            # 2000: "2000"
+            # 5000: "5000"
+            # 10000: "10000"
+        USD:
+          cash:
+            # 0.01: "0.01"
+            # 0.05: "0.05"
+            # 0.1: "0.1"
+            # 0.25: "0.25"
+            # 0.5: "0.5"
+            # 1: "1"
+            # 2: "2"
+            # 5: "5"
+            # 10: "10"
+            # 20: "20"
+            # 50: "50"
+            # 100: "100"
+        EUR:
+          cash:
+            # 0.01: "0.01"
+            # 0.02: "0.02"
+            # 0.05: "0.05"
+            # 0.1: "0.1"
+            # 0.2: "0.2"
+            # 0.5: "0.5"
+            # 1.0: "1.0"
+            # 2.0: "2.0"
+            # 5.0: "5.0"
+            # 10.0: "10.0"
+            # 20.0: "20.0"
+            # 50.0: "50.0"
+            # 100.0: "100.0"
+            # 200.0: "200.0"
+            # 500.0: "500.0"
+        FRF:
+          cash:
+            # 0.05: "0.05"
+            # 0.1: "0.1"
+            # 0.2: "0.2"
+            # 0.5: "0.5"
+            # 1: "1"
+            # 2: "2"
+            # 5: "5"
+            # 10: "10"
+            # 20: "20"
+            # 50: "50"
+            # 100: "100"
+            # 200: "200"
+            # 500: "500"
       items:
         AED: "Dirham des Émirats"
         AFN: "Afghani"
@@ -834,6 +893,7 @@ fra:
         choices: "Choix"
         datatype: "Datatype"
         interpolation: "Interpolation"
+        # related_to: "Related to"
         unit: "Unité"
       choices:
         datatype:
@@ -851,9 +911,16 @@ fra:
           # none: "None"
           # previous: "Previous"
           # sine: "Sine"
+        related_to:
+          # individual: "Individual"
+          # whole: "Whole"
         # unit: # Choices comes from nomenclature: units
       item_lists:
-<<<<<<< HEAD
+        sex:
+          choices:
+            # male: "Male"
+            # female: "Female"
+            # undefined: "Undefined"
         cultural_soil_state:
           choices:
             # covered: "Covered"
@@ -861,27 +928,11 @@ fra:
             # nude: "Nude"
             # plowed: "Plowed"
             # grown: "Grown"
-        sex:
+        animal_life_state:
           choices:
-            # male: "Male"
-            # female: "Female"
-            # undefined: "Undefined"
-        mammalia_reproduction_state:
-          choices:
-            # back_heat: "Back heat"
-            # heat: "Heat"
-            # pregnancy: "Pregnancy"
-=======
-        inhibitors_presence:
-          choices:
-            # negative: "Negative"
-            # positive: "Positive"
->>>>>>> 7b8b7a6706385c0929567e7938d367fa2d93e36c
-        mammalia_twins_condition:
-          choices:
-            # none: "None"
-            # twins: "Twins"
-            # triplets: "Triplets"
+            # first_growth: "First growth"
+            # second_growth: "Second growth"
+            # aging: "Aging"
         mammalia_born_condition:
           choices:
             # without_help: "Without help"
@@ -889,25 +940,22 @@ fra:
             # great_help: "Great help"
             # caesarean: "Caesarean"
             # cutting_calf: "Cutting calf"
-        animal_life_state:
+        mammalia_twins_condition:
           choices:
-            # first_growth: "First growth"
-            # second_growth: "Second growth"
-            # aging: "Aging"
+            # none: "None"
+            # twins: "Twins"
+            # triplets: "Triplets"
         mammalia_lactation_state:
           choices:
             # lactation: "Lactation"
             # depletion: "Depletion"
+        mammalia_reproduction_state:
+          choices:
+            # back_heat: "Back heat"
+            # heat: "Heat"
+            # pregnancy: "Pregnancy"
         plant_reproduction_state:
           choices:
-<<<<<<< HEAD
-=======
-            # male: "Male"
-            # female: "Female"
-            # undefined: "Undefined"
-        plant_reproduction_state:
-          choices:
->>>>>>> 7b8b7a6706385c0929567e7938d367fa2d93e36c
             # swelling: "Swelling"
             # heading: "Heading"
             # flowering: "Flowering"
@@ -924,22 +972,10 @@ fra:
           choices:
             # healthy: "Healthy"
             # sick: "Sick"
-<<<<<<< HEAD
         inhibitors_presence:
           choices:
             # negative: "Negative"
             # positive: "Positive"
-=======
-        mammalia_lactation_state:
-          choices:
-            # lactation: "Lactation"
-            # depletion: "Depletion"
-        mammalia_reproduction_state:
-          choices:
-            # back_heat: "Back heat"
-            # heat: "Heat"
-            # pregnancy: "Pregnancy"
->>>>>>> 7b8b7a6706385c0929567e7938d367fa2d93e36c
       items:
         animal_disease_state: "Phase du bioprocessus de maladie d’un animal"
         animal_life_state: "Phase du bioprocessus de vie d’un animal"
