--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -956,6 +956,7 @@ jpn:
     # product_deaths: "Product deaths"
     # product_enjoyments: "Product enjoyments"
     # product_events: "Product events"
+    # product_indicator_data: "Product indicator data"
     # product_linkages: "Product linkages"
     # product_localizations: "Product localizations"
     # product_measurements: "Product measurements"
@@ -1043,6 +1044,7 @@ jpn:
     # serial: "N°Lot"
     # serial_number: "Serial number"
     # sex: "Sexe"
+    # shape: "Shape"
     # sign_in_count: "Nombre de connexions"
     # siren: "N° SIREN"
     # soundex: "Soundex"
