--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -984,6 +984,7 @@ spa:
           # point: "Point spatial"
           # string: "Texte"
         interpolation: #?
+        related_to: #?
       item_lists:
         animal_disease_state:
           choices: #?
