--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -296,7 +296,7 @@ arb:
       land_parcel_group:
         # born_at: "Créé le"
         # children: "Sous-îlots"
-        # identification_number: "Numéro PAC ou numéro d’ilôts"
+        # identification_number: "Numéro PAC ou numéro d’îlots"
         # real_quantity: "Surface"
       listing:  #?
         created_at: "أنشأت في" #?
@@ -900,7 +900,7 @@ arb:
       journal_record: "سجل المحاسبة" #?
       land_parcel: "الكتلة"
       # land_parcel_cluster: "Îlot"
-      # land_parcel_group: "Ilôt"
+      # land_parcel_group: "Îlot"
       # legal_entity: "Personne morale"
       listing: "الاستخراج"
       listing_node: "عقدة الاستخراج"
