--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -69,7 +69,7 @@ fra:
       land_parcel_group:
         born_at: "Créé le"
         children: "Sous-îlots"
-        identification_number: "Numéro PAC ou numéro d’ilôts"
+        identification_number: "Numéro PAC ou numéro d’îlots"
         real_quantity: "Surface"
       matter:
         born_at: "Fabriqué le"
@@ -320,7 +320,7 @@ fra:
       journal_entry_item: "Ligne d’écriture"
       land_parcel: "Parcelle"
       land_parcel_cluster: "Îlot"
-      land_parcel_group: "Ilôt"
+      land_parcel_group: "Îlot"
       legal_entity: "Personne morale"
       listing: "Extraction"
       listing_node: "Nœud d’extraction"
