--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -650,7 +650,9 @@ fra:
     entities: "Personnes" #?
     entity: "Personne"
     entity_1: "Personne 1"
+    # entity_1_role: "Entity 1 role"
     entity_2: "Personne 2"
+    # entity_2_role: "Entity 2 role"
     entity_link_direction: "Entity link direction"
     entity_link_nature: "Type de lien permettant d’étendre l’abonnement"
     entity_links: "Liens entre personnes" #?
