--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -985,6 +985,7 @@ spa:
           # multi_polygon: "Multi-polygone spatial"
           # point: "Point spatial"
           # string: "Texte"
+        gathering: #?
         interpolation: #?
         related_to: #?
       item_lists:
