--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1062,6 +1062,7 @@ eng:
           # multi_polygon: "Multi-polygone spatial"
           # point: "Point spatial"
           # string: "Texte"
+        gathering: #?
         interpolation: #?
         related_to: #?
       item_lists:
