--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -115,6 +115,7 @@ spa:
         # insurance_expenses: "Primes d’assurance"
         # internal_transfers: "Virements internes"
         # inventory_variations: "Variations d’inventaires"
+        # irrigation_expenses: "Eau d'irrigation"
         # land_loans: "Emprunts fonciers"
         # land_loans_interests: "Intérêts des emprunts fonciers"
         # land_parcel_asset_depreciations: "Ammortissements des terrains de gisement"
@@ -1258,7 +1259,6 @@ spa:
           # pill: "Pilule"
           # plane: "Avion"
           # road: "Route"
-          # tint: "Goutte"
           # tractor: "Tracteur"
           # truck: "Camion"
           # wheat: "Blé"
